style.css
@import @import url('https://fonts.googleapis.com/css2?family=Lato:ital@1&display=swap');

body{
    font-family: 'Lato', sans-serif;
    margin: 0px;
}

:root{
    --primary-color: #27d2d8;
    --secondary-color: #ffffff;
    --third-color: #2ac4d8;
    --forth-color: #92aaad;
    --fifth-color: #052523;
    --sixth-color:  #e3fcff;
    --seventh-color: #cae9ec;
    --eighth-color: #6e7f81;
    --ninth-color: #157477;
}

/** bolds **/
.color-one{
color:var(--secondary-color);

}

/** spaces **/

.margin-md {
    margin: 2rem;
}

/** backgrounds **/
.bg-dark{
    background-color: var(--seventh-color);

}

.bg-light{
    background-color: var(--sixth-color);
    
    }
    



/** links **/
.link{
    box-sizing: border-box;
    text-decoration: none;
    padding: 0.5rem 1rem;
}
.primary-link{
    color:var(--primary-color);
}

.link-primary {
    background-color: var(--primary-color);
    border-radius: 0.9rem;
    color: white;
    display: block;
    max-width: 140px;
    margin: 1rem 1rem 1rem 0rem;
    text-align: center;
}

.link-secondary {
    color: var(--ninth-color);
    border-radius: 0.9rem;
    border: 2px solid var(--ninth-color);
    display: block;
    max-width: 140px;
    margin: 1rem 1rem 1rem 0rem;
}



/** containers **/ 
.container{
    padding: 0rem 1rem;
    
}

.container-center{
    max-width: 600px;
    margin: auto;
}


/** Lists **/

.non-bullet{
    list-style: none;
    padding-inline-start: 0 rem;
}

.list-item-inline{
  display: inline;
  padding: 0rem 0.5rem;
}




/** Navigation **/

.navigation{
    background-color: var(--primary-color);
    padding: 1rem;
    border-bottom-left-radius: 1rem;
    border-bottom-right-radius: 1rem;
}

.navigation .nav-brand{
    font-weight: bold;
    font-size: xx-large;

}

.navigation .active-link{
  font-weight: bold;
}

.navigation .right{
    text-align: right;
}

.navigation .link {
    box-sizing: border-box;
    text-decoration: none;
    color: var(--fifth-color);
    font-size: large;
}

/**Heading **/
.hero{
    padding: 2rem;
}

.hero .hero-img{
    max-width: 350px;
    display: block;
    margin: auto;
}

.hero .hero-main{
    text-align: center;
    padding-top: 1rem;
    color: var(--forth-color);
}

.highlighted{
    color: var(--primary-color);
}

/** Sections **/

.section{
    padding: 2rem;
}
.section h1 {
    text-align: center;
    font-size: x-large;
}

.h3-light  {
    text-align: center;
    color:var(--eighth-color);
    font-size: large;
}

.h3-dark {
    text-align: center;
    font-size: large;
    color: var(--third-color);
}

.section .center{
    text-align: center;
}

/** align **/
.right{
    text-align: right;
}
.left{
    text-align: left;
}
.center{
    text-align: center;
}

/** footers **/

.footer {
    background-color: var(--ninth-color);
    padding: 4rem 1rem;
    text-align: center;
    color: white;
    border-top-right-radius: 1rem;
    border-top-left-radius: 1rem;
}

.footer .link {
    color: white
}

.footer .footer-header {
    font-weight: bold;
    font-size: large;
}

.footer ul {
    padding-inline-start: 0px;
}

